--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 .pict {
   display: inline-block;
   position: relative;
-  width: 29%;
   margin-right: 3%;
+  width: 29%;
   height: 250px;
   overflow: hidden;
 }
@@ -16,9 +16,9 @@
     top: 0;
     left: 0;
     background: #4b89bf;
-    opacity: 0.1;
+    opacity: 0;
     width: 100%;
-    height: 100%;
+    height: 50%;
     transition: opacity 0.5s ease;
     -webkit-transition: opacity 0.5s ease;
     -moz-transition: opacity 0.5s ease;
@@ -37,11 +37,13 @@
     word-break: normal;
     top: 50%;
     transform: translateY(-50%);
+    text-align: center;
     color: #ffffff;
     width: auto;
     z-index: 10;
     word-wrap: break-word;
-    font-size: 1.2em;
+    font-family: Arial;
+    font-size: 1em;
     transition: all 0.3s linear;
     -webkit-transition: all 0.3s linear;
     -moz-transition: all 0.3s linear;
