--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+  font-family: Arial;
+}
+h1 {
+  color: #015ca3;
+}
 .wrapper {
   max-width: 1170px;
   margin: 50px auto;
@@ -18,7 +24,7 @@
     background: #4b89bf;
     opacity: 0;
     width: 100%;
-    height: 50%;
+    height: 100%;
     transition: opacity 0.5s ease;
     -webkit-transition: opacity 0.5s ease;
     -moz-transition: opacity 0.5s ease;
