--- a/style.css
+++ b/style.css
@@ -62,14 +62,14 @@ h1 {
     margin-top: -81px;
   position: relative;
     overflow: hidden;
-    width: 250px;
+    width: 100%;
     margin: -58px 0 2px;
 }
 .pict-hover-text div {
     color: #fff;
     opacity: 0;
     background-color: rgba(29,32,34,.7);
-    width: 250px;
+    width: 100%;
     margin-top: 40px;
     -o-transition: all 200ms ease-in-out;
     transition: all 200ms ease-in-out;
