--- a/style.css
+++ b/style.css
@@ -73,13 +73,10 @@ h1 {
     margin-top: 40px;
     -o-transition: all 200ms ease-in-out;
     transition: all 200ms ease-in-out;
-    border-radius: 0 0 2px 2px;
-    padding: 5px 0;
+    padding: 5px;
 }
 .pict:hover .pict-hover-text div{
     opacity: 1;
-    -webkit-filter: none;
-    filter: none;
     margin-top: 0;
 }
 .pict img {
