--- a/style.css
+++ b/style.css
@@ -60,16 +60,16 @@ h1 {
 .pict-hover-text {
     height: 79px;
     margin-top: -81px;
-  position: relative;
+    position: relative;
     overflow: hidden;
     width: 100%;
-    margin: -58px 0 2px;
+    margin: -50px 0 2px;
 }
 .pict-hover-text div {
     color: #fff;
+    font-size: 0.85em;
     opacity: 0;
     background-color: rgba(29,32,34,.7);
-    width: 100%;
     margin-top: 40px;
     -o-transition: all 200ms ease-in-out;
     transition: all 200ms ease-in-out;
