--- a/style.css
+++ b/style.css
@@ -67,7 +67,8 @@ h1 {
 }
 .pict-hover-text div {
     color: #fff;
-    font-size: 0.85em;
+    font-size: 0.75em;
+    line-height: 1.3em;
     opacity: 0;
     background-color: rgba(29,32,34,.7);
     margin-top: 40px;
