--- a/style.css
+++ b/style.css
@@ -68,13 +68,13 @@ h1 {
 .pict-hover-text div {
     color: #fff;
     font-size: 0.75em;
-    line-height: 1.3em;
+    line-height: 1.3;
     opacity: 0;
     background-color: rgba(29,32,34,.7);
     margin-top: 40px;
     -o-transition: all 200ms ease-in-out;
     transition: all 200ms ease-in-out;
-    padding: 5px;
+    padding: 10px;
 }
 .pict:hover .pict-hover-text div{
     opacity: 1;
