--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h1 {
   height: 250px;
   overflow: hidden;
 }
-.pict-hover-text {
+.pict-text-wrap {
     height: 79px;
     margin-top: -81px;
     position: relative;
@@ -27,7 +27,7 @@ h1 {
     width: 100%;
     margin: -60px 0 2px;
 }
-.pict-hover-text div {
+.pict-text {
     color: #fff;
     font-size: 0.85em;
     line-height: 1.5;
@@ -38,7 +38,7 @@ h1 {
     transition: all 200ms ease-in-out;
     padding: 10px;
 }
-.pict:hover .pict-hover-text div{
+.pict:hover .pict-text {
     opacity: 1;
     margin-top: 0;
 }
